@@ -2,6 +2,8 @@ Changes in Version 0.1.6 (2015-xx-xx)
 =====================================
 datamodel
  - Fix reading JSON-headed ASCII in numpy 1.4, 1.5
+plot.utils
+ - Fix collapse_vertical when called with sequences other than lists
 pycdf
  - On OSX, search more paths for the CDF library
  - CDF.clone() now returns the new variable
@@ -21,7 +23,7 @@ datamodel
  - add function dmfilled: create a filled dmarray with any given fill value
  - updates to toCDF to allow/use NRV variables
 irbempy
- - add function find_footpoint: traces field line from given location to 
+ - add function find_footpoint: traces field line from given location to
    specified altitude
  - add functions find_LCDS and find_LCDS_K to find the last closed drift shell
    at given pitch angle or given second invariant K
